--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "devDependencies": {
     "bulma": "^0.7.4",
     "node-sass": "^4.11.0"
+  },
+  "dependencies": {
+    "animate.css": "^3.7.0"
   }
 }
